# 99-Problems

./: .travis.yml  README.md
.github/workflows/: ocaml.yml  prolog.yml  workflow.yml
ocaml/: .travis-ci-ocaml.sh  OC99.opam  README.md  dune-project
ocaml/.github/workflows/: workflow.yml
ocaml/src/: dune  lists.ml
ocaml/test/: dune  lists.ml
ocaml/tst/: lists.ml
prolog/: .travis-ci-prolog.sh  README.md
prolog/src/: lists.pl
prolog/test/: lists.pl
prolog/tst/: lsts_test.pl
